--- a/components/input/mixin/publish.css
+++ b/components/input/mixin/publish.css
@@ -7,9 +7,10 @@
     height: 100%;
 }
 .name{
-    min-width: 160rpx;
+    min-width: 95rpx;
     box-sizing: border-box;
-    font-size: 28rpx;
+    font-size: 32rpx;
+    color: #222223;
 }
 
 .input_body{
@@ -34,14 +35,14 @@
     display: block;
     height: 100%;
     /*height: 80rpx; line-height: 80rpx;*/
-    font-size: 28rpx; color: #333; box-sizing: border-box;
+    font-size: 32rpx; color: #333; box-sizing: border-box;
     padding:0 10rpx;
     text-align: right;
 }
 .__input_textarea__{
     display: block; line-height: 50rpx;
-    font-size: 26rpx; color: #333; box-sizing: border-box;
-    padding:10rpx;
+    font-size: 32rpx; color: #333; box-sizing: border-box;
+    padding:10rpx 0;
     width:auto; min-height: 70rpx; height: 100%;
 }
 
@@ -91,7 +92,7 @@
     display: inline-block;
     padding:0 10rpx;
     margin:0 10rpx;
-    border:1rpx solid #333;
+    /*border:1rpx solid #333;*/
     text-align: center;
 }
 
@@ -105,7 +106,7 @@
 
 .placeholder_style{
     color: #ccc !important;
-    font-size:23rpx;
+    font-size:32rpx;
 }
 
 .unit{
