--- a/components/input/mixin/publish.css
+++ b/components/input/mixin/publish.css
@@ -4,7 +4,7 @@
 
 .body{
     width:100%; box-sizing: border-box;
-    height: 100%;
+    height: 100%; padding: 0 !important;
 }
 .name{
     min-width: 95rpx;
