--- a/publish/box1.less
+++ b/publish/box1.less
@@ -1,16 +1,14 @@
 
-@supports (top: constant(safe-area-inset-top)) {
-    .safe_bottom_padding {
-        padding-bottom:constant(safe-area-inset-bottom);
-    }
+@import "all";
 
+
+.safe_bottom_padding(){
+    padding-bottom:0;
+    padding-bottom:constant(safe-area-inset-bottom);
+    padding-bottom:env(safe-area-inset-bottom);
 }
 
-@supports (top: env(safe-area-inset-top)) {
-    .safe_bottom_padding {
-        padding-bottom:env(safe-area-inset-bottom);
-    }
-}
+
 
 .diandian{
     text-overflow:ellipsis;
